[tool.poetry]
name = "poetry-homework"
version = "0.1.0"
description = ""
authors = ["romanshkin <rt@infomedia.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
selene = "2.0.0rc9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
